--- a/Leaflet.TileLayer.ColorFilter.updateFilter/demo.css
+++ b/Leaflet.TileLayer.ColorFilter.updateFilter/demo.css
@@ -22,3 +22,62 @@ body {
     background: rgba(255, 255, 255, 0.85);
     border-radius: 5px;
 }
+
+#filter-settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+    margin: 20px;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.85);
+    border-radius: 5px;
+}
+
+#basemap-url {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    margin: 20px;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.85);
+    border-radius: 5px;
+}
+#url-input {
+    width: 400px;
+    border-radius: 2px;
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.274);
+}
+#url-action {
+    border-radius: 2px;
+    background: rgba(39, 39, 39, 0.85);
+    padding: 5px;
+    border: 0px;
+    color: #fff; 
+}
+
+a {
+    text-decoration: none;
+    color: rgb(115, 147, 255)
+}
+
+#reset-settings-container {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+#reset-settings {
+    border-radius: 2px;
+    background: rgba(39, 39, 39, 0.85);
+    padding: 5px;
+    border: 0px;
+    color: #fff; 
+}
